--- a/_posts/2024-11-11-temp.markdown
+++ b/_posts/2024-11-11-temp.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Deep Survival Models Can Improve Long-Term Mortality Risk Estimates from Chest Radiographs"
 date:   2024-05-26 22:21:59 +00:00
-image: /images/chest.png
+image: images/chest.png
 categories: others
 author: "Mingzhu Liu"
 venue: "MDPI Forecasting"
