--- a/_posts/2024-11-11-fm.markdown
+++ b/_posts/2024-11-11-fm.markdown
@@ -12,3 +12,4 @@ paper: https://arxiv.org/abs/2411.12824
 code: https://github.com/Ilovecodingforever/Gen-P-Tuning
 poster: /pdfs/ml4h_no_banner.pdf
 ---
+Also presented at NeurIPS workshop on Time Series in the Age of Large Models
